[gd_scene load_steps=17 format=3 uid="uid://bo4xu3h0hcojs"]

[ext_resource type="Texture2D" uid="uid://dfrs6qakpp3m4" path="res://Textures/UI/crosshair.png" id="1_bq2g6"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_tn7hv"]
[ext_resource type="Script" path="res://Scripts/crosshair.gd" id="2_mfkjx"]
[ext_resource type="Script" path="res://Scripts/Hud.gd" id="2_omrh8"]
[ext_resource type="PackedScene" uid="uid://cnm16hqcv8nsk" path="res://Scenes/Components/hitbox_component.tscn" id="5_l30iv"]
[ext_resource type="Script" path="res://Scripts/Weapons.gd" id="5_lk4yc"]
[ext_resource type="Resource" uid="uid://qw070jtfx7jn" path="res://Resources/Weapons/Pistol.tres" id="6_dog5w"]
[ext_resource type="Script" path="res://Resources/weapon_manager.gd" id="6_gpuqy"]
[ext_resource type="PackedScene" uid="uid://cx4y658vvqbdy" path="res://Scenes/Components/health_component.tscn" id="6_rg2e4"]
[ext_resource type="Resource" uid="uid://dbqv0p1cuv4bi" path="res://Resources/Weapons/DBPShotgun.tres" id="7_6cmj7"]

[sub_resource type="LabelSettings" id="LabelSettings_5a4it"]
font_size = 36
font_color = Color(1, 1, 0, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jx0nl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jrcsa"]

[sub_resource type="Animation" id="Animation_ig6wb"]
resource_name = "RESET"
loop_mode = 1
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Camera3D/Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.04, -0.095, 0.265)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Camera3D/Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_u8xd4"]
resource_name = "sheathe"
length = 0.16667
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Camera3D/Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.04, -0.095, 0.265), Vector3(-0.04, -1.855, 0.265)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Camera3D/Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.5708, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hnxyu"]
_data = {
"RESET": SubResource("Animation_ig6wb"),
"sheathe": SubResource("Animation_u8xd4")
}

[node name="player" type="CharacterBody3D" groups=["Player"]]
collision_mask = 257
up_direction = Vector3(0, -1, 0)
script = ExtResource("1_tn7hv")

[node name="UI" type="CanvasLayer" parent="."]
follow_viewport_enabled = true
script = ExtResource("2_omrh8")

[node name="PanelContainer" type="PanelContainer" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -232.0
offset_top = -136.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Ammo" type="Label" parent="UI/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_5a4it")
horizontal_alignment = 1
vertical_alignment = 1

[node name="crosshair" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="TextureRect" type="TextureRect" parent="crosshair"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_bq2g6")
script = ExtResource("2_mfkjx")
metadata/_edit_use_anchors_ = true

[node name="Head" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Head"]
transform = Transform3D(0.983284, 2.54681e-09, 0.182081, -0.0158694, 0.996194, 0.0856988, -0.181388, -0.0871557, 0.979543, 0, 0, 0)
mesh = SubResource("CapsuleMesh_jx0nl")
skeleton = NodePath("../..")

[node name="Camera3D" type="Camera3D" parent="Head"]
unique_name_in_owner = true
fov = 37.8493

[node name="Pivot" type="Marker3D" parent="Head/Camera3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.04, -0.095, 0.265)
gizmo_extents = 0.5

[node name="Weapons" type="Node3D" parent="Head/Camera3D/Pivot"]
unique_name_in_owner = true
script = ExtResource("5_lk4yc")
weapons = Array[ExtResource("6_gpuqy")]([ExtResource("6_dog5w"), ExtResource("7_6cmj7")])
startwep = Array[String](["Pistol", "DBPShotgun"])
Light = 100
Medium = 50
Heavy = 25
reserves_max = {
"Heavy": 100,
"Light": 300,
"Medium": 200
}

[node name="hitscan" type="RayCast3D" parent="Head/Camera3D"]
unique_name_in_owner = true
enabled = false
target_position = Vector3(0, 0, -100)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
debug_shape_custom_color = Color(0, 0.65098, 0.0627451, 1)

[node name="Raycasts" type="Node3D" parent="Head/Camera3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.04, -0.095, 0.265)

[node name="hitscan2" type="RayCast3D" parent="Head/Camera3D/Raycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.04, 0.095, -0.265)
enabled = false
target_position = Vector3(0, 0, -100)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
debug_shape_custom_color = Color(0, 0.65098, 0.0627451, 1)

[node name="hitscan3" type="RayCast3D" parent="Head/Camera3D/Raycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.04, 0.095, -0.265)
enabled = false
target_position = Vector3(0, 0, -100)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
debug_shape_custom_color = Color(0, 0.65098, 0.0627451, 1)

[node name="hitscan4" type="RayCast3D" parent="Head/Camera3D/Raycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.04, 0.095, -0.265)
enabled = false
target_position = Vector3(0, 0, -100)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
debug_shape_custom_color = Color(0, 0.65098, 0.0627451, 1)

[node name="hitscan5" type="RayCast3D" parent="Head/Camera3D/Raycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.04, 0.095, -0.265)
enabled = false
target_position = Vector3(0, 0, -100)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
debug_shape_custom_color = Color(0, 0.65098, 0.0627451, 1)

[node name="hitscan6" type="RayCast3D" parent="Head/Camera3D/Raycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.04, 0.095, -0.265)
enabled = false
target_position = Vector3(0, 0, -100)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
debug_shape_custom_color = Color(0, 0.65098, 0.0627451, 1)

[node name="hitscan7" type="RayCast3D" parent="Head/Camera3D/Raycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.04, 0.095, -0.265)
enabled = false
target_position = Vector3(0, 0, -100)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
debug_shape_custom_color = Color(0, 0.65098, 0.0627451, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_jrcsa")

[node name="CameraControl" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_hnxyu")
}

[node name="DamageComponent" type="Node3D" parent="."]

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") groups=["Player"] instance=ExtResource("5_l30iv")]
collision_mask = 257
health_component = NodePath("../HealthComponent")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape3D_jrcsa")

[node name="HealthComponent" parent="." instance=ExtResource("6_rg2e4")]

[connection signal="update_ammo" from="Head/Camera3D/Pivot/Weapons" to="UI" method="_on_weapon_update_ammo"]
[connection signal="animation_finished" from="CameraControl" to="Head/Camera3D/Pivot/Weapons" method="_on_camera_control_animation_finished"]
[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
